# triagent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.chainlit  Dockerfile.web  LICENSE  PR_REPORT_FINAL_SUMMARY.md  PR_REPORT_SUMMARY.md  README.md  docker-compose.integration.yml  docker-compose.standalone.yml  docker-compose.test.yml  docker-compose.web.yml  extract_metrics.py  install.ps1  install.sh  pr_report_20251224.html  pr_report_generator.py  pr_report_generator_v2.py  pr_report_v2_20251224.html  pyproject.toml  start-web.ps1  start-web.sh  start_chainlit.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-cross-platform.yml  ci.yml  docker-web.yml  integration-tests.yml  publish-rc.yml  publish.yml  release.yml  test-windows-installer.yml
deploy-pkg/: README.md  pyproject.toml  requirements.txt
deploy-pkg/triagent/: __init__.py  __main__.py  auth.py  cli.py  config.py  hooks.py  sdk_client.py  versions.py
deploy-pkg/triagent/commands/: __init__.py  init.py  team.py  team_report.py
docs/: 1-system-architecture.md  2-implementation-plan.md  dev-tunnel-setup.md  email-cloud-architects-role-request.html  email-cloud-architects-role-request.md  email-role-update-request.md  skills-implementation-plan.md  skills-persona-architecture.md  web-terminal.md  web-ui-azure-sessions-plan.md  windows-installation.md
docs/adr/: ADR-001-chat-interface-framework.md
infrastructure/bicep/: deploy.sh  main.bicep  main.json
scripts/: deploy-sandbox.sh  setup-dev.bat  setup-dev.sh  start-web.sh  test-isolated.sh  test-session-api.py  test-session-api.sh  validate-deployment.py  validate-deployment.sh
shareable-skills/: README.md
shareable-skills/omnia-data/: SKILL.md
shareable-skills/pyspark-reviewer/: SKILL.md
src/triagent/: __init__.py  agent.py  auth.py  cli.py  config.py  hooks.py  permissions.py  sdk_client.py  session_logger.py  versions.py
tests/: __init__.py  conftest.py  test_config.py  test_sdk_commands_e2e.py  test_skills.py  test_system_prompt.py  test_teams.py  test_windows.py
tests/azure/: __init__.py  conftest.py  test_sandbox_api.py  test_session_pool_api.py
tests/e2e/: __init__.py  conftest.py  test_init_flow.py  test_triagent_e2e.py  test_web_ui.py
tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_redis_integration.py
tests/web/: __init__.py  conftest.py  test_api.py  test_auth.py  test_models.py
(+114 files in other folders)
